arrumando z-index da pagina de 10 anos. Ainda tem um bug.

--- a/src/wp-content/themes/viradacultural/less/10-anos.less
+++ b/src/wp-content/themes/viradacultural/less/10-anos.less
@@ -2,6 +2,10 @@
 -------------------------------------------------------------- */
 #main-section.virada-10-anos {
 
+    figure {
+        z-index: 1 !important;
+    }
+
   position: relative;
   
   article {
@@ -45,6 +49,7 @@
       background-color: @rosa;
       color: white;
       display: inline-block;
+      height: initial;
       padding: 18px 36px;
       position: absolute;
       top: 0;
